# modIQ

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROJECT_STATUS.md  README.md  ROADMAP.md  rust-toolchain.toml  rustfmt.toml
adrs/: 0001-foundation-freeze.md  0002-domain-model-boundaries.md  0005-deterministic-assessment-engine.md
apps/sandbox/: README.md  package-lock.json  package.json  tsconfig.json
apps/sandbox/src-tauri/: Cargo.toml  tauri.conf.json
apps/sandbox/src-tauri/fixtures/sample-assessment-input/: notes.txt
apps/sandbox/src-tauri/fixtures/sample-assessment-input/nested/: detail.txt
apps/sandbox/src-tauri/src/: lib.rs  main.rs
crates/modiq-cli/: Cargo.toml  README.md
crates/modiq-cli/src/: app.rs  lib.rs  main.rs
crates/modiq-cli/src/commands/: assess.rs  help.rs  mod.rs  retrieve.rs  version.rs
crates/modiq-collection/: Cargo.toml
crates/modiq-common/: Cargo.toml  README.md
crates/modiq-engine/: Cargo.toml  README.md
crates/modiq-knowledge/: Cargo.toml  README.md
crates/modiq-report/: Cargo.toml  README.md
crates/modiq-rules/: Cargo.toml  README.md
crates/modiq-runtime/: Cargo.toml  README.md
crates/modiq-storage/: Cargo.toml
crates/modiq-storage/src/: lib.rs
crates/modiq-storage/src/storage/: mod.rs  persisted_report.rs  report_key.rs  report_store.rs  report_store_error.rs
crates/modiq-versioning/: Cargo.toml
docs/: 00-Governance.md  Architecture.md  Glossary.md  Principles.md  README.md  Sprint0.md  Vision.md
docs/adrs/: 0003-assessment-aggregate-root.md  0004-platform-first-version-profiles.md  0006-documentation-release-1.0-freeze.md  0007-runtime-entity-design-pattern.md  0008-evidence-collection-subsystem-boundary.md  0009-assessmentservice-public-api-evolution.md  0010-engine-orchestration-simplification.md  README.md
docs/architecture/: Architecture.md  DataModel.md  EngineAPI.md  EvidenceCollection.md  KnowledgeModel.md  RuleEngine.md  VersionProfile.md
docs/constitutional/: Glossary.md  Principles.md  ProductSpecification.md  Vision.md
docs/engineering/: CHIEF_ARCHITECT_HANDOFF_v1.0.md  CHIEF_ARCHITECT_HANDOFF_v1.1.md  COLLECTOR_COMPOSITION_ARCHITECTURE_PROPOSAL.md  ENGINEERING_LOG.md  ENGINEERING_RELEASE_0.3.md  ENGINEERING_RELEASE_0.4.md  ENGINEERING_RELEASE_0.5.md  ENGINEERING_RELEASE_0.6.md  ENGINEERING_RELEASE_0.7.md  ENGINEERING_RELEASE_0.8.md  ENGINEERING_RELEASE_0.9.md  ENGINEERING_RELEASE_1.0.md  ENGINEERING_RELEASE_1.1.md  ENGINEERING_RELEASE_1.2.md  ENGINEERING_RELEASE_1.3.md  ENGINEERING_RELEASE_1.4.md  ENGINEERING_RELEASE_v0.1.0-alpha.md  ENGINEERING_WORKFLOW_CONSOLIDATION_REPORT.md  ENGINEERING_WORKFLOW_CONSOLIDATION_STUDY.md  GOV-012_AND_FINDINGSEVERITY_PREPARATION.md  GOV002_ARCHITECTURE_EVALUATION.md  GOV003_ARCHITECTURE_EVALUATION.md  GOV003_IMPLEMENTATION_AUTHORIZATION.md  GOV003_SPRINT_PLAN.md  (+60 more)
fixtures/: README.md
(+114 files in other folders)
