[workspace]
resolver = "2"

members = [
    "crates/modiq-cli",
    "crates/modiq-collection",
    "crates/modiq-common",
    "crates/modiq-engine",
    "crates/modiq-knowledge",
    "crates/modiq-report",
    "crates/modiq-rules",
    "crates/modiq-runtime",
    "crates/modiq-versioning",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = "8"