[package]
name = "modiq-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
modiq-runtime = { path = "../modiq-runtime" }
modiq-engine = { path = "../modiq-engine" }
modiq-report = { path = "../modiq-report" }
modiq-storage = { path = "../modiq-storage" }